# MLOPS-vehicle-insurance

./: .dockerignore  Dockerfile  LICENSE  README.md  demo.py  projectflow.txt  pyproject.toml  setup.py  workflow
.github/workflows/: aws.yaml
artifact/01_05_2026_00_00_48/data_transformation/transformed_object/: preprocessing.pkl
artifact/01_06_2026_01_34_44/data_transformation/transformed_object/: preprocessing.pkl
artifact/01_06_2026_01_38_45/data_transformation/transformed_object/: preprocessing.pkl
artifact/01_11_2026_02_18_39/data_transformation/transformed_object/: preprocessing.pkl
artifact/01_11_2026_02_27_15/data_transformation/transformed_object/: preprocessing.pkl
artifact/01_11_2026_02_35_56/data_transformation/transformed_object/: preprocessing.pkl
artifact/01_11_2026_22_28_47/data_transformation/transformed_object/: preprocessing.pkl
notebook/: exp-notebook.ipynb  mongodb_demo.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py
src/logger/: __init__.py
src/pipeline/: training_pipeline.py
src/utils/: main_utils.py
