[project]
name = "mlops-vehicle-insurance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
mlops-vehicle-insurance = { workspace = true }

[dependency-groups]
dev = [
    "boto3>=1.42.13",
    "botocore>=1.42.13",
    "certifi>=2025.11.12",
    "dill>=0.4.0",
    "fastapi>=0.125.0",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mlops-vehicle-insurance",
    "mypy-boto3-s3>=1.42.10",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pymongo>=4.15.5",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
]
